--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,10 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require reset
+ *= require jquery-ui
+ *= require colorbrewer
+ *= require choropleth
+ *= require bootstrap.min.css
+ *= require styles
 */
