Api calls for county, state data, fix comma for seed data

--- a/app/views/map/homepage.html.haml
+++ b/app/views/map/homepage.html.haml
@@ -2,6 +2,6 @@
   :javascript
     $(function() {
       MapApp.start({
-        outbreaks: #{@outbreaks_json}, 
+        outbreaks: #{@outbreaks_json}
       });
     });
