--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,3 +1,18 @@
+//padding for bootstrap nav
+body {
+  padding-top: 50px;
+}
+
+.container {
+  margin-bottom: 5em;
+}
+
+
+//styles for data page
+.container-main {
+  margin: 1em 5em;
+}
+
 .pagination span:first-child {
   float: none;
   padding: 0 .2em;
