--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,15 @@
     = csrf_meta_tags
     %meta{'http-equiv' => 'X-UA-Compatible', :content => 'chrome=1'}
   %body
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container
+          %a.brand Visualizations
+          %ul.nav
+            %li.active 
+              %a{:href => '/'} Map
+            %li
+              %a{:href => '/outbreaks'} Data
     .container
       #header
       #main
