--- a/app/views/layouts/data_layout.html.haml
+++ b/app/views/layouts/data_layout.html.haml
@@ -8,7 +8,16 @@
     = csrf_meta_tags
     %meta{'http-equiv' => 'X-UA-Compatible', :content => 'chrome=1'}
   %body
-    .container
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container
+          %a.brand Visualizations
+          %ul.nav
+            %li 
+              %a{:href => '/'} Map
+            %li
+              %a{:href => '/outbreaks'} Data
+    .container-main
       #header
       #main= yield 
       #footer
