Add basic tooltip, some comments, chart colors

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -74,6 +74,15 @@ table {
   .county-hover {
    fill: #666; 
   }
+ 
+  #tooltip {
+    position: absolute;
+    z-index: 10;
+    background-color: #FFF;
+    font-size: 1em;
+    padding: 1em;
+    border: 1px solid #666;
+  }
   
   .bar-chart {
     float: right;
