--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .page-header {
-  padding-bottom: 1em;
+  padding-bottom: .5em;
 }
 
 
@@ -62,6 +62,21 @@ table {
 }
 
 //Visualization styles
+#slider {
+  label {
+    //margin: 0 1em 0 2em;
+    //display: inline-block !important; //override Bootstrap
+    display: none;
+  }
+  select {
+    display: none;
+    //height: 22px;
+  }
+  dl dt {
+    z-index: 1000;
+    border-bottom: 0;
+  }
+}
 .viz {
   overflow:hidden;
   margin-top: 2em;
@@ -85,6 +100,9 @@ table {
   }
   
   .bar-chart {
+    &:first-child {
+      margin-top: 2em;
+    }
     float: right;
     width: 25%;
     height: 150px;
@@ -100,11 +118,4 @@ table {
       }
     }
   }
-  #food {
-  }
-  #location {
-  }
-  #etiology {
-  }
 }
-
