Add JQRangeSlider for dates

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,6 @@
  *= require colorbrewer
  *= require choropleth
  *= require bootstrap.min.css
+ *= require jQRangeSlider-dev 
  *= require styles
 */
