--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,7 @@
  *
  *= require_self
  *= require reset
- *= require jquery-ui
+ *= require jquery-ui-1.8.18.custom
  *= require colorbrewer
  *= require choropleth
  *= require bootstrap.min.css
