--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -61,6 +61,9 @@ table {
 .viz {
   overflow:hidden;
   margin-top: .5em;
+  width: 1200px;
+  margin: 0 auto;
+  position: relative;
 
   .map {
     float: left;
