Make county hover yellow border instead of fill

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -124,7 +124,8 @@ table {
   }
   
   .county-hover {
-   fill: #666; 
+   stroke: yellow !important;
+   stroke-width: 3px !important;
   }
 
   .bg-path-color {
