First draft background page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,6 @@
  *= require choropleth
  *= require bootstrap.min.css
  *= require jQRangeSlider-dev 
- *= require styles
+ *= require visualization
+ *= require site
 */
