--- a/app/views/layouts/site_layout.html.haml
+++ b/app/views/layouts/site_layout.html.haml
@@ -9,9 +9,7 @@
     %meta{'http-equiv' => 'X-UA-Compatible', :content => 'chrome=1'}
   %body
     = render 'layouts/nav'
-    .container
-      #header
     #main
+      .container= yield 
     #footer
-    = yield :javascript
 
