--- a/app/views/outbreaks/index.html.haml
+++ b/app/views/outbreaks/index.html.haml
@@ -1,4 +1,5 @@
-%h1 CDC Foodborne Illness Outbreaks 1998-2009
+.page-header
+  %h2 CDC Foodborne Illness Outbreaks 1998-2009
 %br
 %table.table-striped
   %tr
